<resources>
    <string name="app_name">FacTrack</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_teacher_bottom_nav">TeacherBottomNav</string>
    <string name="title_home">Your profile</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Other options</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="FacultyName">K.P. Singh</string>
    <string name="FacultyDesignation">Asst. Professor\nDept. of IT.\nIIIT-Allahabad</string>
    <string name="ContactDetails">Contact Details</string>
    <string name="OfficeAddress">Office Address:</string>
    <string name="PhoneOffice">Phone (Office):</string>
    <string name="PhonePersonal">"\t\t\t(Personal):"</string>
    <string name="EmailOffice">E-mail (Office):</string>
    <string name="EmailPersonal">"\t\t\t(Personal):"</string>
    <string name="Homepage1">Profile page:</string>
    <string name="Homepage2">Homepage:</string>

    <!-- KP Singh details for dummy use-->
    <string name="kp_office">"4207 (CC-II)\nIndian Institute of Information Technology - Allahabad\nDevghat, Jhalwa,\nAllahabad 211 015, (UP) INDIA"</string>
    <string name="kp_phone_office">+91-532-2922226</string>
    <string name="kp_phone_personal">N.A.</string>
    <string name="kp_email_office">kpsingh@iiita.ac.in</string>
    <string name="kp_email_personal">N.A.</string>
    <string name="kp_profilepage">http://profile.iiita.ac.in/kpsingh/</string>
    <string name="kp_homepage">https://it.iiita.ac.in/?pg=facultypage&amp;uid=kpsingh</string>

    <string name="Schedule">Schedule</string>

    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>

    <string-array name="buildings">
        <item>Admin</item>
        <item>CC-1</item>
        <item>CC-2</item>
        <item>CC-3</item>
        <item>LT</item>
        <item>Library</item>
        <item>Cafeteria</item>
        <item>Outside</item>
    </string-array>

    <string name="chooseDepartment">Choose Department</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="homepage_personal">Personal Homepage</string>
    <string name="number_office">Office number</string>
    <string name="number_personal">Personal number</string>
    <string name="address">Address</string>
    <string name="department">Department</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_getSchedule">GetSchedule</string>
    <string name="title_activity_TeacherForm">TeacherForm</string>
    <string name="title_activity_dialog">Dialog</string>
    <string name="title_activity_add_schedule">AddSchedule</string>
    <string name="title_activity_StudentForm">Student Form</string>


    <string-array name="departments">
        <item>IT</item>
        <item>ECE</item>
        <item>Applied Sciences</item>
        <item>MBA</item>

    </string-array>

    <string-array name="hostels">
        <item>BH-1</item>
        <item>BH-2</item>
        <item>BH-3</item>
        <item>BH-4</item>
        <item>BH-5</item>
        <item>GH-1</item>
        <item>GH-2</item>
        <item>GH-3</item>
        <item>RSA</item>

    </string-array>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>

    </string-array>


</resources>
