<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f1f5f7"
    tools:context=".teacherView.TeacherView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:id="@+id/header_full"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_centerHorizontal="true"
                    android:elevation="1dp"
                    android:src="@drawable/kps"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/border_black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        app:contentPaddingTop="15dp"
                        app:contentPaddingRight="15dp"
                        app:contentPaddingLeft="15dp"
                        app:contentPaddingBottom="15dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/faculty_name"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="45dp"
                                android:text="@string/FacultyName"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/faculty_designation"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/FacultyDesignation"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>


            </RelativeLayout>



        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/header_full">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="10dp"
                    app:contentPaddingBottom="15dp"
                    app:contentPaddingLeft="4dp"
                    app:contentPaddingRight="15dp"
                    android:clickable="true"
                    app:contentPaddingTop="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardBackgroundColor="@color/gray300"
                            app:cardCornerRadius="5dp"
                            app:contentPaddingBottom="1dp"
                            app:contentPaddingLeft="1dp"
                            app:contentPaddingRight="1dp"
                            app:contentPaddingTop="1dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="3dp"
                                android:text="Contact Details"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </android.support.v7.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/OfficeAddress"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/faculty_address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/kp_office"
                                android:textSize="12sp" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/PhoneOffice"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/faculty_phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/kp_phone_office"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/PhonePersonal"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/faculty_mobile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/kp_phone_personal"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/EmailOffice"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/faculty_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/kp_email_office"
                                android:textSize="12sp" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/Homepage2"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/faculty_homepage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/kp_homepage"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="10dp"
                    app:contentPaddingBottom="15dp"
                    app:contentPaddingLeft="4dp"
                    app:contentPaddingRight="15dp"
                    android:clickable="true"
                    app:contentPaddingTop="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardBackgroundColor="@color/gray300"
                            app:cardCornerRadius="5dp"
                            app:contentPaddingBottom="1dp"
                            app:contentPaddingLeft="1dp"
                            app:contentPaddingRight="1dp"
                            app:contentPaddingTop="1dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="3dp"
                                android:text="@string/Schedule"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </android.support.v7.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="12dp"
                            android:orientation="horizontal">

                            <Button
                                android:background="@drawable/button_round"
                                android:id="@+id/btn_monday"
                                android:layout_width="75dp"
                                android:layout_marginLeft="3dp"
                                android:layout_height="wrap_content"
                                android:text="@string/Monday"
                                android:textSize="12sp" />

                            <Button
                                android:background="@drawable/button_round"
                                android:id="@+id/btn_tuesday"
                                android:layout_width="75dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="13dp"
                                android:text="@string/Tuesday"
                                android:textSize="12sp" />

                            <Button
                                android:background="@drawable/button_round"
                                android:id="@+id/btn_wednesday"
                                android:layout_width="85dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="13dp"
                                android:text="@string/Wednesday"
                                android:textSize="12sp" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="50dp"
                            android:orientation="horizontal">

                            <Button
                                android:background="@drawable/button_round"
                                android:id="@+id/btn_thursday"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:text="@string/Thursday"
                                android:textSize="12sp" />

                            <Button
                                android:background="@drawable/button_round"
                                android:id="@+id/btn_friday"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:text="@string/Friday"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>



            </LinearLayout>


        </RelativeLayout>



    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>